style: fix glossary term overflow in tables

--- a/components/Table/style.scss
+++ b/components/Table/style.scss
@@ -8,7 +8,7 @@
     display: table;
     border-collapse: collapse;
     border-spacing: 0;
-    overflow: auto;
+    // overflow: auto;
     width: 100%;
     color: var(--table-text);
 
@@ -54,7 +54,7 @@
     & {
       position: relative;
       display: block;
-      overflow: hidden;
+      // overflow: hidden;
       border-radius: var(--table-radius, var(--markdown-radius, 2px));
     }
     &:after {
@@ -69,7 +69,7 @@
       border-radius: inherit;
     }
     &-inner {
-      overflow: auto;
+      // overflow: auto;
       min-width: 100%;
       box-sizing: content-box;
       width: 100%;
